# snake

./: CMakeLists.txt
src/: main.cxx
